[gd_scene load_steps=15 format=3 uid="uid://bx1adka66qsq6"]

[ext_resource type="Script" uid="uid://bt8fj6qnc6uh8" path="res://Scripts/pantalla_victoria.gd" id="1_ol3vk"]
[ext_resource type="Texture2D" uid="uid://yx2gxjtnjrv8" path="res://Assets/kenney_ui-pack/Vector/Yellow/button_rectangle_flat.svg" id="1_u8ccn"]
[ext_resource type="Texture2D" uid="uid://bwgvm41gnbqqj" path="res://Assets/kenney_ui-pack/Vector/Red/button_rectangle_line.svg" id="2_ol3vk"]
[ext_resource type="Texture2D" uid="uid://doo8ho6reqyyu" path="res://Assets/kenney_ui-pack/Vector/Red/button_round_flat.svg" id="3_d62by"]
[ext_resource type="Texture2D" uid="uid://cns2n3uip3bre" path="res://Assets/kenney_ui-pack/Vector/Red/button_round_gradient.svg" id="4_j0gay"]
[ext_resource type="Texture2D" uid="uid://bgysc5siwsh7u" path="res://Assets/kenney_ui-pack/Vector/Red/button_round_line.svg" id="5_t04d4"]
[ext_resource type="Texture2D" uid="uid://bbpneh8388gox" path="res://Assets/kenney_ui-pack/Vector/Grey/button_rectangle_gradient.svg" id="6_ix84g"]
[ext_resource type="Texture2D" uid="uid://bioit7i71uqvi" path="res://Assets/kenney_ui-pack/Vector/Grey/arrow_basic_e_small.svg" id="7_15i55"]
[ext_resource type="Texture2D" uid="uid://d3b7fdcrd1ycu" path="res://Assets/kenney_ui-pack/Vector/Yellow/slide_hangle.svg" id="8_ui35c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qdio1"]
texture = ExtResource("1_u8ccn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7cmwd"]
texture = ExtResource("2_ol3vk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_svn2f"]
texture = ExtResource("6_ix84g")

[sub_resource type="FontVariation" id="FontVariation_vlpnk"]

[sub_resource type="LabelSettings" id="LabelSettings_ihyj1"]
font = SubResource("FontVariation_vlpnk")
font_size = 70
font_color = Color(0.93333334, 0.15294118, 0.2784314, 1)

[node name="Victoria" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ol3vk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.041
anchor_top = 0.135
anchor_right = 0.47500002
anchor_bottom = 0.707
offset_left = 277.76797
offset_top = 42.519997
offset_right = 277.8
offset_bottom = 62.863983
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qdio1")

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 371.0
offset_top = 210.0
offset_right = 773.0
offset_bottom = 451.0
theme_override_styles/panel = SubResource("StyleBoxTexture_7cmwd")

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.54300004
anchor_top = 0.73300004
anchor_right = 0.61200005
anchor_bottom = 0.86
offset_left = -18.536072
offset_top = -17.98404
offset_right = -34.024048
offset_bottom = -36.28003
scale = Vector2(1.896525, 1.905242)
texture_normal = ExtResource("3_d62by")
texture_pressed = ExtResource("4_j0gay")

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.372
anchor_top = 0.73
anchor_right = 0.446
anchor_bottom = 0.86600006
offset_left = -27.544006
offset_top = -21.040009
offset_right = -48.791992
offset_bottom = -45.16803
scale = Vector2(2.1407228, 2.024422)
texture_normal = ExtResource("5_t04d4")

[node name="Panel2" type="Panel" parent="CanvasLayer"]
offset_left = 324.0
offset_top = 64.0
offset_right = 364.0
offset_bottom = 104.0
scale = Vector2(12.556521, 3.0398324)
theme_override_styles/panel = SubResource("StyleBoxTexture_svn2f")

[node name="ArrowBasicESmall" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(677, 515)
scale = Vector2(3.0156248, 2.9843721)
texture = ExtResource("7_15i55")

[node name="SlideHangle" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(467, 513)
scale = Vector2(2.75, 2.187501)
texture = ExtResource("8_ui35c")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 366.0
offset_top = 75.0
offset_right = 778.0
offset_bottom = 171.0
text = "Completado"
label_settings = SubResource("LabelSettings_ihyj1")

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
